--- a/src/app/component/attendance/attendance.component.css
+++ b/src/app/component/attendance/attendance.component.css
@@ -7,7 +7,7 @@
 .circle{
     height: 6em;
     width: 6em;
-    background-color: rgba(0,0,0,.1);
+    background-color: rgba(144, 144, 144, 0.1);
     border-radius: 100%;
     border: 1em solid #F89926 ;
     display: inline-block;
@@ -15,6 +15,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #3f51b5;
+    font-weight: 500;
 }
 
 .statistics{
@@ -120,4 +122,14 @@
   }
   .bold{
       font-weight: 500;
+  }
+.container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+   height:100px; 
+   width: 100%;
+}
+  .option{
+    height: 100px;
   }
