--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -1,6 +1,11 @@
 <div style="overflow-y: hidden;">
     <div style="display: flex; justify-content: space-between;">
         <h1 class="mat-h1" style="font-weight: 500;">Leave</h1>
+        <button mat-raised-button (click)="openDialog()" color="primary">
+            <mat-icon>event-note
+            </mat-icon> Apply Leave
+        </button>
+
     </div>
     <div style=" display: flex; flex-direction: row">
         <a routerLink="/account/dashboard">
@@ -109,6 +114,12 @@
                 <mat-icon color="primary" style="color: green;">remove_red_eye</mat-icon>
                 <mat-icon color="primary" style="margin-left: 5px;">edit</mat-icon>
                 <mat-icon style="margin-left: 5px;" color="warn">delete</mat-icon>
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="duration">
+            <th mat-header-cell *matHeaderCellDef>Duration</th>
+            <td mat-cell *matCellDef="let element">
+                <div>1 day</div>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns">
