--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -51,7 +51,7 @@
         <mat-card
             style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
             <div>
-                <div style="font-size: 1.8em; line-height: 1.8em;">Request</div>
+                <div style="font-size: 1.8em; line-height: 1.8em;">Pending Request</div>
                 <div style="font-size: 1.2em">02</div>
             </div>
             <div>
@@ -101,6 +101,13 @@
             <th mat-header-cell *matHeaderCellDef>Status</th>
             <td mat-cell *matCellDef="let element">
                 <div>Pending</div>
+
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="duration">
+            <th mat-header-cell *matHeaderCellDef>Duration</th>
+            <td mat-cell *matCellDef="let element">
+                <div>3hrs</div>
 
             </td>
         </ng-container>
