--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,14 +1,14 @@
-<mat-toolbar style="background-color: #FFE599; color: white; display: flex; justify-content: center; align-items: center; border-bottom: 1px solid black;">
+<mat-toolbar style="background-color: #ffffff; height: 90px; color: white; display: flex; justify-content: center; align-items: center; box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;">
     <img height="60px" src="/assets/images/allweb.png" alt="#" routerLink="">
 </mat-toolbar>
-<div style="height: 91%; background-color: #fafafa; display: flex; justify-content: center; align-items: center; position: relative">
+<div style="height: 87%; background-color: #fafafa; display: flex; justify-content: center; align-items: center; position: relative">
     <div class="center-content">
         <div class="container">
             <div>
-                <img class="img-login" src="../../../assets/images/login.svg" alt="" style="width: 28em">
+                <img class="img-login" src="../../../assets/images/login.svg" alt="" style="width: 28em; height: 500px;">
             </div>
-            <div class="right-section">
-                <mat-card>
+            <div class="right-section" style="width: 500px;">
+                <mat-card style="padding: 35px 70px; border: 1px solid orange;">
                     <h1 style=" text-align: center; font-weight: 500">Sign In</h1>
                     <img src="../../../assets/images/qrcode.svg" class="qrcode" alt="">
                     <div>
@@ -19,13 +19,13 @@
 
                     <mat-form-field appearance="outline" class="full-width">
                         <mat-label>Enter your email</mat-label>
-                        <input matInput placeholder="sophea.yuos@allweb.com" [formControl]="email1" required>
+                        <input matInput placeholder="sophea.yuos@allweb.com" [formControl]="email1" [(ngModel)]="user.email" required>
                         <mat-error *ngIf="email1.invalid">{{getErrorMessage()}}</mat-error>
                         <mat-icon matSuffix color="primary">email</mat-icon>
                     </mat-form-field>
                     <mat-form-field appearance="outline" class="full-width">
                         <mat-label>Enter your password</mat-label>
-                        <input matInput required [type]="hide ? 'password' : 'text'">
+                        <input matInput required [type]="hide ? 'password' : 'text'" [(ngModel)]="user.password" (keyup.enter)="login()">
                         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                             <mat-icon style="color: #3f51b5">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
