--- a/src/app/component/reset-password/reset-password.component.html
+++ b/src/app/component/reset-password/reset-password.component.html
@@ -19,7 +19,7 @@
 
                     <mat-form-field appearance="fill">
                         <mat-label>Enter new password</mat-label>
-                        <input matInput [type]="hide ? 'password' : 'text'">
+                        <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="resetCollection.password">
                         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                             [attr.aria-pressed]="hide">
                             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -27,13 +27,15 @@
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Confirm password</mat-label>
-                        <input matInput [type]="hide ? 'password' : 'text'">
+                        <input matInput [type]="hide ? 'password' : 'text'"
+                            [(ngModel)]="resetCollection.repeat_password">
                         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                             [attr.aria-pressed]="hide">
                             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
                     </mat-form-field>
-                    <button type="button" mat-raised-button color="primary" class="btn-submit">Reset</button>
+                    <button type="submit" (click)="resetNewPassword()" mat-raised-button color="primary"
+                        class="btn-submit">Reset</button>
                 </mat-card>
 
 
