--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -31,6 +31,18 @@
                             <h3>Leave</h3>
                         </a>
                     </mat-list-item>
+                    <mat-list-item>
+                        <a style="margin-left: -16px; padding: 10px 3.2rem 10px 16px" routerLink="/employee/department" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Department</h3>
+                        </a>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <a style="margin-left: -16px; padding: 10px 4rem 10px 16px" routerLink="/employee/position" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Position</h3>
+                        </a>
+                    </mat-list-item>
                 </div>
             </mat-list>
             <a mat-list-item routerLink="/attendance" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
