--- a/src/app/component/forgot-password/forgot-password.component.html
+++ b/src/app/component/forgot-password/forgot-password.component.html
@@ -20,9 +20,11 @@
                     <mat-form-field appearance="outline" class="full-width top-margin">
 
                         <mat-label>Email</mat-label>
-                        <input type=" email" required matInput placeholder="Email" value="">
+                        <input [(ngModel)]="forgotPassword.email" type=" email" required matInput placeholder="Email"
+                            value="">
                     </mat-form-field>
-                    <button type="button" mat-raised-button color="primary" class="btn-submit">Submit</button>
+                    <button type="button" mat-raised-button color="primary" class="btn-submit"
+                        (click)="submit()">Submit</button>
                 </mat-card>
 
 
