--- a/src/app/component/forgot-password/forgot-password.component.html
+++ b/src/app/component/forgot-password/forgot-password.component.html
@@ -12,27 +12,25 @@
             <img class="img-login" src="../../../assets/images/forgetpassword.svg" alt="" style="width: 28em">
 
             <div class="right-section">
-                <mat-card style="width: 60%">
 
-                    <h1 style="text-align: center; font-weight: bold">Forgot Password</h1>
-                    <p>Enter your email below to get a reset link to change password</p>
+                <form>
+                    <mat-card style="width: 60%">
 
-                    <mat-form-field appearance="outline" class="full-width top-margin">
+                        <h1 style="text-align: center; font-weight: bold">Forgot Password</h1>
+                        <p>Enter your email below to get a reset link to change password</p>
 
-                        <mat-label>Email</mat-label>
-                        <input [(ngModel)]="forgotPassword.email" type=" email" required matInput placeholder="Email"
-                            value="">
-                    </mat-form-field>
-                    <button type="button" mat-raised-button color="primary" class="btn-submit"
-                        (click)="submit()">Submit</button>
-                </mat-card>
+                        <mat-form-field appearance="outline" class="full-width top-margin">
 
+                            <mat-label>Email</mat-label>
+                            <input [(ngModel)]="forgotPassword.email" type=" email" name="email" required matInput
+                                placeholder="Email" value="" [formControl]="email" required>
+                            <mat-error>{{ getErrorMessage()}}</mat-error>
+                        </mat-form-field>
+                        <button type="submit" mat-raised-button color="primary" class="btn-submit"
+                            (click)="submit()">Submit</button>
+                    </mat-card>
 
+                </form>
             </div>
-
-
-
-
         </div>
     </div>
-</div>
