--- a/src/app/component/employee-department/employee-department.component.html
+++ b/src/app/component/employee-department/employee-department.component.html
@@ -1,1 +1,84 @@
-<p>employee-department works!</p>
+<div style="overflow-y: hidden;">
+    <div style="display: flex; justify-content: space-between;">
+        <h1 class="mat-h1" style="font-weight: 500;">Department</h1>
+        <button mat-raised-button (click)="openDialog()" color="primary">
+            <mat-icon>add_box
+            </mat-icon> Add Department
+        </button>
+
+    </div>
+    <div style=" display: flex; flex-direction: row">
+        <a routerLink="/account/dashboard">
+            <h4>Dashboard</h4>
+        </a>
+        <h4 style="margin-left: 3px;">/ Department </h4>
+    </div>
+</div>
+<div style="margin: 0.8em;">
+    <!--Table section-->
+    <div style="margin-top: 1em; margin-bottom: -1em;">
+        <h3>All Department</h3>
+    </div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 table__section" style="width: 100%;">
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef>No</th>
+            <td mat-cell *matCellDef="let element">{{element.position}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="department">
+            <th mat-header-cell *matHeaderCellDef>department>
+            <td mat-cell *matCellDef="let element">{{element.department}}</td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="weight">
+            <th mat-header-cell *matHeaderCellDef>Leave Type</th>
+            <td mat-cell *matCellDef="let element">{{element.weight}}</td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="symbol">
+            <th mat-header-cell *matHeaderCellDef>Posting Date</th>
+            <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element">
+                <mat-form-field style="width: 6em">
+                    <mat-label></mat-label>
+                    <mat-select value="option1">
+                        <mat-option value="option1">Pending</mat-option>
+                        <mat-option value="option2">Approved</mat-option>
+                        <mat-option value="option3">Reject</mat-option>
+                    </mat-select>
+                </mat-form-field>
+
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon color="primary" style="color: green;">remove_red_eye</mat-icon>
+                <mat-icon color="primary" style="margin-left: 5px;">edit</mat-icon>
+                <mat-icon style="margin-left: 5px;" color="warn">delete</mat-icon>
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="duration">
+            <th mat-header-cell *matHeaderCellDef>Duration</th>
+            <td mat-cell *matCellDef="let element">
+                <div>1 day</div>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+
+        </tr>
+
+
+
+    </table>
+
+</div>
