--- a/src/app/component/employee-position/employee-position.component.html
+++ b/src/app/component/employee-position/employee-position.component.html
@@ -1,1 +1,20 @@
-<p>employee-position works!</p>
+<div style="overflow-y: hidden;">
+    <div style="display: flex; justify-content: space-between;">
+        <h1 class="mat-h1" style="font-weight: 500;">Position</h1>
+        <button mat-raised-button (click)="openDialog()" color="primary">
+            <mat-icon>add_box
+            </mat-icon> Add Position
+        </button>
+
+    </div>
+    <div style=" display: flex; flex-direction: row">
+        <a routerLink="/account/dashboard">
+            <h4>Dashboard</h4>
+        </a>
+        <h4 style="margin-left: 3px;">/ Position </h4>
+    </div>
+</div>
+<div style="margin: 0.8em">
+
+
+</div>
