--- a/src/app/component/employee-department/employee-department.component.html
+++ b/src/app/component/employee-department/employee-department.component.html
@@ -21,46 +21,20 @@
     </div>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 table__section" style="width: 100%;">
         <!-- Position Column -->
-        <ng-container matColumnDef="position">
+        <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef>No</th>
-            <td mat-cell *matCellDef="let element">{{element.position}}</td>
+            <td mat-cell *matCellDef="let element">{{element.id}}</td>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="department">
-            <th mat-header-cell *matHeaderCellDef>department>
-            <td mat-cell *matCellDef="let element">{{element.department}}</td>
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Department</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef>Leave Type</th>
-            <td mat-cell *matCellDef="let element">{{element.weight}}</td>
-        </ng-container>
-
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-            <th mat-header-cell *matHeaderCellDef>Posting Date</th>
-            <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
-        </ng-container>
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Status</th>
-            <td mat-cell *matCellDef="let element">
-                <mat-form-field style="width: 6em">
-                    <mat-label></mat-label>
-                    <mat-select value="option1">
-                        <mat-option value="option1">Pending</mat-option>
-                        <mat-option value="option2">Approved</mat-option>
-                        <mat-option value="option3">Reject</mat-option>
-                    </mat-select>
-                </mat-form-field>
-
-            </td>
-        </ng-container>
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
-                <mat-icon color="primary" style="color: green;">remove_red_eye</mat-icon>
                 <mat-icon color="primary" style="margin-left: 5px;">edit</mat-icon>
                 <mat-icon style="margin-left: 5px;" color="warn">delete</mat-icon>
             </td>
@@ -76,9 +50,8 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;">
 
         </tr>
-
-
-
     </table>
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]" showFirstLastButtons aria-label="Select page of Department">
+    </mat-paginator>
 
 </div>
